--- a/style.css
+++ b/style.css
@@ -1,104 +1,17 @@
-html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-nav {
-  border-bottom: 1px solid #EAEAEB;
-  text-align: right;
-  height: 70px;
-  line-height: 70px;
-}
-
-#navigation {
-  margin: 0px 30px 0px 0px;
-}
-
-#navigation a{
-  clear: right;
-  text-decoration: none;
-  color: rgb(144, 144, 144);
-  margin: 0px 10px;
-  line-height: 70px;
-}
-
-span {
-  color: #54D17A;
-}
-
-label {
-  margin: 0px 40px 0px 0px;
-  font-size: 26px;
-  line-height: 70px;
-  display: none;
-  width: 26px;
-  float: right;
-}
-
-#toggle {
-  display: none;
-}
-
-@media only screen and (max-width: 500px) {
-  label {
-    display: block;
-    cursor: pointer;
-  }
-
-  .navigation {
-    text-align: center;
-    width: 100%;
-    display: none;
-  }
-
-  #navigation a {
-    display: block;
-    border-bottom: 1px solid #EAEAEB;
-    margin: 0px;
-  }
-
-  #toggle:checked + #navigation {
-    display: block;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 body {
   background-image: url("https://images.pexels.com/photos/842948/pexels-photo-842948.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-size: cover;
   background-position: center;
-  width:100%;
+  width:100%;*/
 /*color: #fff;*/
   margin:0px;
   padding:0px;
-  font-family: 'Do Hyeon', sans-serif;*/
+  font-family: 'Do Hyeon', sans-serif;
 }
 
-/*.paragraph {*/
+.paragraph {
   /*border: 1px solid blue;*/
-/*  text-align: left;
+  text-align: left;
   padding: 0px 50px 10px 300px;
   margin-left: 50px;
   font-size: 20px;
@@ -114,6 +27,7 @@ body {
   float:left;
   border-radius: 15px;
   margin-left: 50px;
+  width: 250px;
 }
 
 .about-me-container{
@@ -129,26 +43,26 @@ body {
     display: flex;
     justify-content: center;
     /*border: 1px solid blue;*/
-/*}
+}
 
 .Gallery-1, .Gallery-2, .Gallery-3 {
     margin: 0 10px;
 }
 
-.welcome {*/
+.welcome {
   /*border: 1px solid red;*/
-/*  color: white;
+ color: white;
   text-align: center;
-  background-color: #4b4b4b;*/
+  background-color: #4b4b4b;
   /*border: #454444;*/
-/*  margin: auto;
+  margin: auto;
   width: auto;
   padding: 5px 0px;
 }
 
-.welcome-word {*/
+.welcome-word {
   /*border: 1px solid red;*/
-/*  font-size: 40px;
+  font-size: 40px;
   letter-spacing: 3px;
 }
 
@@ -213,11 +127,11 @@ body {
   text-align: center;
 }*/
 
-/*.video {
+.video {
   display: inline-block;
-}*/
+}
 
-/*.video-1 {
+.video-1 {
   display: flex;
   justify-content: center;
   
@@ -226,65 +140,4 @@ body {
 .video-2 {
   display: flex;
   justify-content: center;
-}*/
-
-/*.video-1, .video-2 {
-  display: inline-block;
-  flex-direction: row;
-}*/
-
-/*aside {
-  display: block;
-}*/
-
-/*#copyright {
-  text-align: center;
-  height: 70px;
-  color: white;
-  background-color: #333;
-  border: 1px solid red;
-}
-
-header {
-  background-color: white;
-  border: none;
-}
-
-#logo {
-  width: 300px;
-}
-
-nav {
-  float: right;
-}
-
-nav ul li {
-  font-size: 30px;
-  display: inline-block;
-  margin-right: 20px;
-}*/
-
-/*ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-/*li a:hover {
-    background-color: #111;
 }
